--- a/app/package.json
+++ b/app/package.json
@@ -4,7 +4,7 @@
   "description": "A demo React/Redux web app that gets exchange rates from a ReST API",
   "main": "server.js",
   "scripts": {
-    "start": "webpack-dev-server",
+    "start": "webpack-dev-server --hot --inline",
     "webpack": "webpack",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -30,6 +30,7 @@
     "react-css-modules": "^4.1.0",
     "react-datepicker": "^0.40.0",
     "react-dom": "^15.3.2",
+    "react-hot-loader": "^1.3.1",
     "react-redux": "^5.0.2",
     "react-responsive": "^1.2.6",
     "react-router": "^3.0.2",
